--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
-<h1>Joao</h1>
-<h2>1º Ano A</h2>
-<h3>pensamento computacional</h3>
-<h4>Nossa 1ª aula</h4>
+<h1>Sobre a Barbearia Alura</h1>
+
+
+<p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.
+
+<em><p>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes".</strong>.
+</p></em>
+
+<p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
